day17 project1 part2 create a DetailViewController and load the selected image

--- a/project1ofhackingwithswift/project1ofhackingwithswift/Base.lproj/Main.storyboard
+++ b/project1ofhackingwithswift/project1ofhackingwithswift/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -46,6 +47,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yxb-5C-U2L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="142" y="58"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Uf1-AD-aLy">
+            <objects>
+                <viewController storyboardIdentifier="detail" id="AEs-l8-rDq" customClass="DetailViewController" customModule="project1ofhackingwithswift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pAs-iP-NOO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dTK-ct-7L2">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="dTK-ct-7L2" secondAttribute="bottom" id="Cwr-Kf-jh4"/>
+                            <constraint firstAttribute="trailing" secondItem="dTK-ct-7L2" secondAttribute="trailing" id="Ft5-77-VXO"/>
+                            <constraint firstItem="dTK-ct-7L2" firstAttribute="leading" secondItem="pAs-iP-NOO" secondAttribute="leading" id="LDo-hb-tuj"/>
+                            <constraint firstItem="dTK-ct-7L2" firstAttribute="top" secondItem="pAs-iP-NOO" secondAttribute="top" id="Qm1-sP-pW3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AoB-fW-9Hy"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="dTK-ct-7L2" id="DHh-YW-xtW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fiq-tQ-8HR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="802.89855072463774" y="60.9375"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1Sm-Za-rsX">
